# word-search-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: dictionary.rs  generator.rs  lib.rs  partial_puzzle.rs  puzzle.rs  puzzle_solver.rs  solver.rs
test/: easy_input.txt  medium_input.txt
