[package]
name = "word-search-rust"
version = "0.1.0"
authors = ["Antonio Scotti <zengar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
strum = "0.17.1"
strum_macros = "0.17.1"
lazy_static = "1.4.0"
rand = "0.7.3"

[[bin]]
name = "solver"
path ="src/solver.rs"

[[bin]]
name = "generator"
path ="src/generator.rs"